# code-snippet

./: .gitignore  Continous_Optimzation.ipynb  README.md  name.tex
algorithm/: 202-happy-number.py
animation/: README.md
blockchain/: safe[NR].md  safe_[NR]_[Todo].md
blockchain/contract/: README.md  oracle.md
blockchain/dApp/: .gitignore  README.md
cloud/: kubernetes.tf
coding/implementation-of-rust/rust-design-pattern/: Cargo.toml  README.md
coding/implementation-of-rust/rust-design-pattern/builder-pattern/: main.rs
coding/nodejs/: README.md
coding/rust/: random.txt
deep-learning/: README.md  coco-to-csv.MD
deep-learning/GAT/: README.md
deep-learning/core/: bert_create_visualize_embedding_jp_[NR].md  roberta-add-custom-layer.md  roberta_add_custom_layer_[NR].md  roberta_add_custom_layer_[WIP].md
devop/: kaggle-env-to-anaconda.txt  manual-deploy.sh  solana-indexer.sh  tee.sh
devop-snippet/: docker-build-and-upload.sh  gcp-k8s-ingress-nginx.sh  index-manager-dockerfile
devop-snippet/postgres/: Dockerfile
language/rust/: README.md
machine-learning/: README.md  finetune_sbert_with_SNLI-and-MNLI_[NR].md
machine-learning/question-anwering/: finetune_bert-and-roberta_with_triplet-and-pairdataset.md  finetune_distilbert_with_squad.md  finetune_sentencetransformer-distilbert_tripletdataset.md
math/: fermat.tex  laplace.md  laplace_[inprogress].tex  maximum-likelihood-estimation.MD  self-attention.tex  self_attention_[inprogress].tex  signal.md
ml/: README.md
ml/mask-language-model/: README.md  bertembedding_[NR].MD  (+9 more)
security/: idor.md
(+120 files in other folders)
