[package]
name = "rust-design-pattern"
version = "0.1.0"
authors = ["thala321 <phanthanhhuy1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "strategy-pattern"
path = "strategy-pattern/main.rs"

[[bin]]
name = "builder-pattern"
path = "builder-pattern/main.rs"